--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <!-- h1 section -->
-      <section class="hero-section">
+      <section>
         <div class="container hero-inner">
           <h1 class="hero-section-title">
             Effective Solutions for Your Business
@@ -64,6 +64,11 @@
           <h2 class="visually-hidden">Feature</h2>
           <ul class="feature-list">
             <li class="feature-list-inner">
+              <div class="icons-feature-conteiner">
+                <svg class="icons-feature" width="64" height="64">
+                  <use href="/images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +77,11 @@
             </li>
 
             <li class="feature-list-inner">
+              <div class="icons-feature-conteiner">
+                <svg class="icons-feature" width="64" height="64">
+                  <use href="/images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
             </li>
 
             <li class="feature-list-inner">
+              <div class="icons-feature-conteiner">
+                <svg class="icons-feature" width="64" height="64">
+                  <use href="/images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
             </li>
 
             <li class="feature-list-inner">
+              <div class="icons-feature-conteiner">
+                <svg class="icons-feature" width="64" height="64">
+                  <use href="/images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,6 +132,28 @@
               <div class="team-section-list-box">
                 <h3 class="card-title">Mark Guerrero</h3>
                 <p class="card-text">Product Designer</p>
+                <div class="social-card">
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
 
@@ -125,6 +167,28 @@
               <div class="team-section-list-box">
                 <h3 class="card-title">Tom Ford</h3>
                 <p class="card-text">Frontend Developer</p>
+                <div class="social-card">
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
 
@@ -138,6 +202,28 @@
               <div class="team-section-list-box">
                 <h3 class="card-title">Camila Garcia</h3>
                 <p class="card-text">Marketing</p>
+                <div class="social-card">
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
 
@@ -151,6 +237,28 @@
               <div class="team-section-list-box">
                 <h3 class="card-title">Daniel Wilson</h3>
                 <p class="card-text">UI Designer</p>
+                <div class="social-card">
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="social-icon">
+                    <svg width="16" height="16" class="social-card-icon">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
           </ul>
@@ -163,72 +271,126 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-inner">
-              <img
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image">
+                <img
+                  src="./images/our-portfolio/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-image-overley">
+                  <p class="portfolio-overley-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="prtf-list-in-box">
                 <h3 class="portfolio-card-title">Banking App</h3>
                 <p class="portfolio-card-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-inner">
-              <img
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image">
+                <img
+                  src="./images/our-portfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-image-overley">
+                  <p class="portfolio-overley-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="prtf-list-in-box">
                 <h3 class="portfolio-card-title">Cashless Payment</h3>
                 <p class="portfolio-card-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-inner">
-              <img
-                src="./images/our-portfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image">
+                <img
+                  src="./images/our-portfolio/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-image-overley">
+                  <p class="portfolio-overley-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="prtf-list-in-box">
                 <h3 class="portfolio-card-title">Meditation App</h3>
                 <p class="portfolio-card-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-inner">
-              <img
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image">
+                <img
+                  src="./images/our-portfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-image-overley">
+                  <p class="portfolio-overley-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="prtf-list-in-box">
                 <h3 class="portfolio-card-title">Taxi Service</h3>
                 <p class="portfolio-card-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-inner">
-              <img
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image">
+                <img
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-image-overley">
+                  <p class="portfolio-overley-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="prtf-list-in-box">
                 <h3 class="portfolio-card-title">Screen Illustrations</h3>
                 <p class="portfolio-card-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-inner">
-              <img
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image">
+                <img
+                  src="./images/our-portfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-image-overley">
+                  <p class="portfolio-overley-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="prtf-list-in-box">
                 <h3 class="portfolio-card-title">Online Courses</h3>
                 <p class="portfolio-card-text">Marketing</p>
@@ -239,14 +401,41 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-web-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-web-footer">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="text-footer-social">Social media</p>
+          <div class="social-card">
+            <div class="social-icon">
+              <svg width="24" height="24" class="social-card-icon">
+                <use href="/images/icons.svg#icon-instagram"></use>
+              </svg>
+            </div>
+            <div class="social-icon">
+              <svg width="24" height="24" class="social-card-icon">
+                <use href="/images/icons.svg#icon-twitter"></use>
+              </svg>
+            </div>
+            <div class="social-icon">
+              <svg width="24" height="24" class="social-card-icon">
+                <use href="/images/icons.svg#icon-facebook"></use>
+              </svg>
+            </div>
+            <div class="social-icon">
+              <svg width="24" height="24" class="social-card-icon">
+                <use href="/images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
