--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <p class="card-text">Product Designer</p>
                 <ul class="social-icon">
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="instagram"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -144,7 +144,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="twitter"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -152,7 +152,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="facebook"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -160,7 +160,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="linkedin"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -182,7 +182,7 @@
                 <p class="card-text">Frontend Developer</p>
                 <ul class="social-icon">
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="instagram"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -190,7 +190,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="twitter"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -198,7 +198,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="facebook"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -206,7 +206,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="linkedin"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -228,7 +228,7 @@
                 <p class="card-text">Marketing</p>
                 <ul class="social-icon">
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="instagram"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -236,7 +236,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="twitter"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -244,7 +244,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="facebook"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -252,7 +252,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="linkedin"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -274,7 +274,7 @@
                 <p class="card-text">UI Designer</p>
                 <ul class="social-icon">
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="instagram"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -282,7 +282,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="twitter"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -290,7 +290,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="facebook"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -298,7 +298,7 @@
                   </li>
 
                   <li class="social-icon-list">
-                    <a class="social-icon-link" href="" alt="linkedin"
+                    <a class="social-icon-link" href=""
                       ><svg width="16" height="16" class="social-card-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -449,7 +449,7 @@
           <p class="text-footer-social">Social media</p>
           <ul class="social-icon-footer">
             <li class="social-icon-list">
-              <a class="social-icon-link-footer" href="" alt="instagram"
+              <a class="social-icon-link-footer" href=""
                 ><svg width="24" height="24" class="social-card-icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
@@ -457,7 +457,7 @@
             </li>
 
             <li class="social-icon-list">
-              <a class="social-icon-link-footer" href="" alt="twitter"
+              <a class="social-icon-link-footer" href=""
                 ><svg width="24" height="24" class="social-card-icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -465,7 +465,7 @@
             </li>
 
             <li class="social-icon-list">
-              <a class="social-icon-link-footer" href="" alt="facebook"
+              <a class="social-icon-link-footer" href=""
                 ><svg width="24" height="24" class="social-card-icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
@@ -473,7 +473,7 @@
             </li>
 
             <li class="social-icon-list">
-              <a class="social-icon-link-footer" href="" alt="linkedin"
+              <a class="social-icon-link-footer" href=""
                 ><svg width="24" height="24" class="social-card-icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
